--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
   "Boavista", "Bochum", "Bodø/Glimt", "Bohemians", "Bohemians Praga", "Bologna", "Bolton", "Bordeaux", "Borussia Dortmund", "Borussia M'Gladbach", 
   "Botev Plovdiv", "Braga", "Brage", "Brann", "Brasov FC", "Breidablik", "Brighton", "Brøndby", "Burnley", "Bursaspor", "Cagliari", "Cannes", 
   "Carl Zeiss Jena", "Celta Vigo", "Celtic", "CFR Cluj", "Chaves", "Chelsea", "Chemnitzer", "Club Brugge", "Coleraine", "Colonia", "Copenaghen", 
-  "Cork Celtic", "Cork City", "Cork Hibernians", "Čornomorec' Odesa", "Corvinul Hunedoara", "Crusaders", "Csepel", "CSKA Mosca", "CSKA Sofia", 
+  "Cork Celtic", "Cork City", "Cork Hibernians", "Čornomorec' Odesa", "Corvinul Hunedoara", "Crusaders", "Csepel", "CSKA Mosca", "CSKA Sofija", 
   "CUF Barreiro", "Cukaricki", "DAC Dunajská Streda", "Debrecen", "Denizlispor", "Deportivo La Coruña", "Derby County", "Derry City", "Derry City", 
-  "Dinamo Berlin", "Dinamo Bucarest", "Dinamo Dresda", "Dinamo Kiev", "Dinamo Minsk", "Dinamo Mosca", "Dinamo Tbilisi", "Dinamo Tirana", 
+  "Dinamo Berlin", "Dinamo București", "Dynamo Dresden", "Dinamo Kiev", "Dinamo Minsk", "Dinamo Mosca", "Dinamo Tbilisi", "Dinamo Tirana", 
   "Dinamo Zagabria", "Diosgyor", "Djurgården", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praga", "Dundalk", 
   "Dundee FC", "Dundee Utd", "DWS", "Dyskobolia Grodzisk Wielkopolski", "Eendracht Aalst", "Eintracht Braunschweig", "Eintracht Francoforte ", 
   "Elbasani", "Elfsborg", "EPA Larnaca", "Erzgebirge Aue", "Esbjerg", "Espanyol", "Estoril Praia", "Etar", "Everton", "FC Jazz", "Fehérvár", 
@@ -237,14 +237,14 @@
   "GKS Katowice", "Glenavon", "Glentoran", "Gornik Zabrze", "Göteborg", "Grasshopers", "Grazer AK", "Groningen", "Guingamp", "Gwardia Warszawa", 
   "Győr", "Haarlem", "Häcken", "Hajduk Split", "Haka", "Halmstad", "Hammarby", "Hamrun Spartans", "Hannover 96", "Hansa Rostock", "Hapoel Be'er Sheva", 
   "Hapoel Tel Aviv", "Hearts", "Heerenveen", "Hellas Verona", "Helsingborg", "Hertha Berliner", "Hibernian", "Hibernians", "HIFK", "HJK", "Hoffenheim ", 
-  "Honved Budapest ", "HPS", "Hradec Kralove", "Hvidovre", "IA Akraness", "IBV Vestmannæyja", "IFK Malmö", "Ilves", "Internazionale Milano", "Inter Bratislava", "Ipswich Town", 
+  "Honvéd Budapest", "HPS", "Hradec Kralove", "Hvidovre", "IA Akraness", "IBV Vestmannæyja", "IFK Malmö", "Ilves", "Internazionale Milano", "Inter Bratislava", "Ipswich Town", 
   "Ironi Kiryat Shmona", "Istanbul Basaksehir", "Jablonec", "Jeunesse Esch", "Juventus", "KA Akureyri", "Kaiserslautern", "Karlsruher", "Karpaty", "KB", 
   "Keflavik", "KF Tirana", "Kí Klaksvík", "Kilmarnock", "Køge BK", "Kongsvinger IT", "Konyaspor", "KPV", "KR Reykjavik", "Krasnodar ", "KSV Waregem", 
   "Kuban' Krasnodar", "KuPS", "Kuusysi", "KV Mechelen", "La Chaux-de-Fonds", "Las Palmas", "LASK Linz", "Laval", "Lazio", "Lech Poznań", "Leeds United", 
   "Legia Warszawa", "Leicester City", "Lens", "Levante", "Levski Sofija", "Lierse", "Lille", "Lillestrøm", "Limerick", "Lincoln Red Imps", "Linfield", "Linz", 
   "Lisburn Distillery", "Liteks Loveč", "Liverpool", "Livorno", "LKS Łódź", "Lokeren", "Lokomotiv Leipzig", "Lokomotiv Moskva", "Lokomotiv Sofija", 
   "Losena", "Luzern", "Ludogorec", "Lugano", "Lyn Oslo", "Lyngby", "Maccabi Haifa", "Maccabi Tel Aviv", "Magdeburg", "Mainz", "Mallorca", "Málaga", "Malmö FF", 
-  "Manchester City", "Manchester Utd", "Marek Dupnica", 
+  "Manchester City", "Manchester United", "Marek Dupnica", 
   "Marítimo", "Metalist Charkiv", "Metz", "Middlesbrough", "Midtjylland", "Milan", "Mlada Boleslav", "Molde", "Monaco", "München 1860", "Montpellier", "Moss", 
   "MTK Budapest", "Nacional de Madeira", "Nancy", "Nantes", "Napoli", "NEC Nijmegen", "Neftçi Baku", "Neuchâtel Xamax", "Newcastle Utd", "Nice", "NK Maribor", 
   "Nordsjælland", "Nürnberg", "Norrköping", "Norwich City", "Nottingham Forest", "NS Mura", "Obilić", "Odense", "OFĪ Krītī", "OFK Beograd", "Olimpija Ljubljana", 
@@ -259,7 +259,7 @@
   "Shamrock Rovers", "Sheffield Wednesday", "Shelbourne", "Sheriff Tiraspol", "Sigma Olomouc", "Silkeborg", "Sion", "Sivasspor", "Siviglia", "Skeid", "Skënderbeu", "Skonto Riga", 
   "Slavia Praga", "Slavija-Mazyr", "Slesia Breslavia", "Sliema Wanderers", "Sligo Rovers", "Slovacko", "Slovan Bratislava", "Slovan Liberec", "Sochaux", "Southampton", 
   "Sparta Praga", "Sparta Rotterdam", "Spartak Mosca", "Spartak Plovdiv", "Spartak Trnava", "Spora Lussemburgo", "Sporting Gijón", "Sporting Clube de Portugal", "Sportul Studentesc Bucarest", 
-  "St Patrick's", "St. Johnstone", "St. Mirren", "Stade Dudelange", "Stade Reims", "Stahl Brandeburgo", "Stal Mielec", "Standard Liegi", "Start", "Steaua Bucarest", "Stella Rossa", 
+  "St Patrick's", "St. Johnstone", "St. Mirren", "Stade Dudelange", "Stade Reims", "Stahl Brandeburgo", "Stal Mielec", "Standard Liegi", "Start", "Steaua Bucarest", "Crvena Zvezda", 
   "Stuttgart", "Stoke City", "Strasbourg", "Stromsgodset", "Sturm Graz", "Swansea", "Swarovski Tirolo", "Szombierki Bytom", "Tatran Presov", "Tavriya Sinferopoli", "Tekstil'ščik Kamyšin", 
   "Tenerife", "Teplice", "Thun", "Tirolo Innsbruck", "Toulouse", "Torino", "Torpedo Moskva", "Tottenham", "TPS", "Trabzonspor", "Trelleborg FF", "Tromsø", "Twente", "U Craiova", 
   "Udinese", "Uerdingen", "Ujpest Dosza", "Union Berlino", "Union Lussemburgo", "Union Saint-Gilloise", "Unirea Urziceni", "UTA Arad", "Utrecht", "Vác", "Vaduz", "Valencia", "Valerenga", 
@@ -267,7 +267,7 @@
   "Villareal", "Vistola Kraków", "Vitesse", "Vitkovice", "Vitoria Guimaraes", "Vitoria Setubal", "Vllaznia", "Vojvodina", "Vorskla", "VSS Kosice", "Wacker Innsbruck", "Waterford", 
   "Watford", "Werder Brema", "West Bromwich", "West Ham", "Wettingen", "Widzew Lodz", "Wiener SK", "Wigan", "Willem II", "Winterslag", "Wolfsburg", "Wolverhampton", "Young Boys Berna", 
   "Zaglebie Lubin", "Zaglebie Walbrzych", "Zalgiris", "Zalgiris Kaunas", "Zbrojovka Brno", "Zeljeznicar", "Zenit San Pietroburgo", "Zilina", "Zimbru Chișinău", "Zorja", "Zrinjski Mostar", 
-  "Zulte Waregem", "Zurich"
+  "Zulte Waregem", "Zürich"
 ];
   const teamInfo = {
   "Milan": {
@@ -317,9 +317,28 @@
 "PSV Eindhoven":{CL_O: 1, CL_P:1, CL_VS:0, CL_DR:-4}
       },
       "1956/57": {
-        "Real Madrid": { CL_TotCL: 6, CL_CL: 1, CL_SF: 1, EL_Q: 1, SC_SC: 0 },
-        "Milan": { CL_TotCL: 2, CL_Q: 1, EL_EL: 2, SC_SC: 1 },
-        "Barcellona": { EL_TotEL: 5, EL_EL: 2, EL_Q: 1, SC_SC: 0 }
+        "Real Madrid": { CL_CL: 1, CL_P: 1, CL_VS:4, CL_DR:8},
+        "Fiorentina": { CL_F: 1, CL_P: 1, CL_VS:2, CL_DR:2},
+"Manchester United": { CL_SF: 1, CL_P: 1, CL_VS:2, CL_DR:12},
+"Crvena Zvezda": { CL_SF: 1, CL_P: 1, CL_VS:1, CL_DR:3},
+"Athletic Bilbao": { CL_Q: 1, CL_P: 1, CL_VS:3, CL_DR:2},
+"CSKA Sofija": { CL_Q: 1, CL_P: 1, CL_VS:0, CL_DR:5},
+"Grasshoppers": { CL_Q: 1, CL_P: 1, CL_VS:-1, CL_DR:-1},
+"Nice": { CL_Q: 1, CL_P: 1, CL_VS:-2, CL_DR:-4},
+"Slovan Bratislava": { CL_O: 1, CL_P: 1, CL_VS:0, CL_DR:1},
+"Rapid Wien": { CL_O: 1, CL_P: 1, CL_VS:0, CL_DR:0},
+"Rangers": { CL_O: 1, CL_P: 1, CL_VS:0, CL_DR:0},
+"Honvéd Budapest": { CL_O: 1, CL_P: 1, CL_VS:-1, CL_DR:-1},
+"Borussia Dortmund": { CL_O: 1, CL_P: 1, CL_VS:-1, CL_DR:-1},
+"Norrköping": { CL_O: 1, CL_P: 1, CL_VS:-1, CL_DR:-1},
+"Dinamo București": { CL_O: 1, CL_P: 1, CL_VS:0, CL_DR:-5},
+"Roda Kerkrade": { CL_O: 1, CL_P: 1, CL_VS:-2, CL_DR:-3},
+"Spora Luxembourg": { CL_P: 1, CL_VS:0, CL_DR:0},
+"Galatasaray": { CL_P: 1, CL_VS:0, CL_DR:-1},
+"Legia Warszawa": { CL_P: 1, CL_VS:0, CL_DR:-2},
+"Aarhus": { CL_P: 1, CL_VS:-1, CL_DR:-4},
+"Porto": { CL_P: 1, CL_VS:-2, CL_DR:-2},
+"Anderlecht": { CL_P: 1, CL_VS:-2, CL_DR:-12}
       }
     };const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
