--- a/index.html
+++ b/index.html
@@ -270,18 +270,14 @@
   "Zulte Waregem", "Zürich"
 ];
   const teamInfo = {
-  "Milan": {
-    flag: "https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
-    colorsImg: "https://upload.wikimedia.org/wikipedia/commons/1/1d/Bianco_e_Rosso_%28Croce%29_e_Rosso_e_Nero_%28Strisce%29.svg"
-  },
-  "Real Madrid": {
-    flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
-    colorsImg: "https://upload.wikimedia.org/wikipedia/commons/c/cf/White_background_HEX-FEFB58_border_HEX-3F479E_diagonal_stripe.svg"
-  },
-  "Barcelona": {
-    flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
-    colorsImg: "https://upload.wikimedia.org/wikipedia/commons/4/4f/600px_Blue_HEX-00529F_Gold_HEX-FFDF1A_White_Purple_HEX-A2214B_Red_HEX-E1393D.svg"
-  }
+  "Milan": {flag: "https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
+    colorsImg: "https://upload.wikimedia.org/wikipedia/commons/1/1d/Bianco_e_Rosso_%28Croce%29_e_Rosso_e_Nero_%28Strisce%29.svg"},
+  "Real Madrid": {flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
+    colorsImg: "https://upload.wikimedia.org/wikipedia/commons/c/cf/White_background_HEX-FEFB58_border_HEX-3F479E_diagonal_stripe.svg"},
+  "Stade Reims": {flag:"https://upload.wikimedia.org/wikipedia/commons/c/c3/Flag_of_France.svg",
+    colorsImg: "https://upload.wikimedia.org/wikipedia/commons/1/1b/600px_White_border_HEX-DC143C_rectangle.svg"},
+  "Barcelona": {flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
+    colorsImg: "https://upload.wikimedia.org/wikipedia/commons/4/4f/600px_Blue_HEX-00529F_Gold_HEX-FFDF1A_White_Purple_HEX-A2214B_Red_HEX-E1393D.svg"}
   // Continua così per le altre squadre...
 };
     const groups = [
