--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
   "Dundee FC", "Dundee Utd", "DWS", "Dyskobolia Grodzisk Wielkopolski", "Eendracht Aalst", "Eintracht Braunschweig", "Eintracht Francoforte ", 
   "Elbasani", "Elfsborg", "EPA Larnaca", "Erzgebirge Aue", "Esbjerg", "Espanyol", "Estoril Praia", "Etar", "Everton", "FC Jazz", "Fehérvár", 
   "Fenerbahce", "Ferencvaros", "Feyenoord", "Fiorentina", "First Vienna", "FK TSC Bačka Topola", "Flamurtari", "Flora Tallin", "Floriana", "Fortuna Dusseldorf", 
-  "Fram Reykjavik", "Fredrikstad", "Freiburg", "Fulham", "Galatasaray ", "Gaziantepspor", "Gençlerbirliği", "Genk", "Genoa", "Gent", "Getafe", 
-  "GKS Katowice", "Glenavon", "Glentoran", "Gornik Zabrze", "Göteborg", "Grasshopers", "Grazer AK", "Groningen", "Guingamp", "Gwardia Warszawa", 
+  "Fram Reykjavik", "Fredrikstad", "Freiburg", "Fulham", "Galatasaray", "Gaziantepspor", "Gençlerbirliği", "Genk", "Genoa", "Gent", "Getafe", 
+  "GKS Katowice", "Glenavon", "Glentoran", "Gornik Zabrze", "Göteborg", "Grasshoppers", "Grazer AK", "Groningen", "Guingamp", "Gwardia Warszawa", 
   "Győr", "Haarlem", "Häcken", "Hajduk Split", "Haka", "Halmstad", "Hammarby", "Hamrun Spartans", "Hannover 96", "Hansa Rostock", "Hapoel Be'er Sheva", 
   "Hapoel Tel Aviv", "Hearts", "Heerenveen", "Hellas Verona", "Helsingborg", "Hertha Berliner", "Hibernian", "Hibernians", "HIFK", "HJK", "Hoffenheim ", 
   "Honvéd Budapest", "HPS", "Hradec Kralove", "Hvidovre", "IA Akraness", "IBV Vestmannæyja", "IFK Malmö", "Ilves", "Internazionale Milano", "Inter Bratislava", "Ipswich Town", 
@@ -258,7 +258,7 @@
   "Sachsen Leipzig", "Sachtar Donec'k", "Saint Etienne", "Salisburgo", "Sampdoria", "San Gallo", "Saragozza", "Sarajevo", "Sassuolo", "Schalke 04", "Servette", "Shahter FK", 
   "Shamrock Rovers", "Sheffield Wednesday", "Shelbourne", "Sheriff Tiraspol", "Sigma Olomouc", "Silkeborg", "Sion", "Sivasspor", "Siviglia", "Skeid", "Skënderbeu", "Skonto Riga", 
   "Slavia Praga", "Slavija-Mazyr", "Slesia Breslavia", "Sliema Wanderers", "Sligo Rovers", "Slovacko", "Slovan Bratislava", "Slovan Liberec", "Sochaux", "Southampton", 
-  "Sparta Praga", "Sparta Rotterdam", "Spartak Mosca", "Spartak Plovdiv", "Spartak Trnava", "Spora Lussemburgo", "Sporting Gijón", "Sporting Clube de Portugal", "Sportul Studentesc Bucarest", 
+  "Sparta Praga", "Sparta Rotterdam", "Spartak Mosca", "Spartak Plovdiv", "Spartak Trnava", "Spora Luxembourg", "Sporting Gijón", "Sporting Clube de Portugal", "Sportul Studentesc Bucarest", 
   "St Patrick's", "St. Johnstone", "St. Mirren", "Stade Dudelange", "Stade Reims", "Stahl Brandeburgo", "Stal Mielec", "Standard Liegi", "Start", "Steaua Bucarest", "Crvena Zvezda", 
   "Stuttgart", "Stoke City", "Strasbourg", "Stromsgodset", "Sturm Graz", "Swansea", "Swarovski Tirolo", "Szombierki Bytom", "Tatran Presov", "Tavriya Sinferopoli", "Tekstil'ščik Kamyšin", 
   "Tenerife", "Teplice", "Thun", "Tirolo Innsbruck", "Toulouse", "Torino", "Torpedo Moskva", "Tottenham", "TPS", "Trabzonspor", "Trelleborg FF", "Tromsø", "Twente", "U Craiova", 
@@ -328,7 +328,7 @@
 "Borussia Dortmund": { CL_O: 1, CL_P: 1, CL_VS:-1, CL_DR:-1},
 "Norrköping": { CL_O: 1, CL_P: 1, CL_VS:-1, CL_DR:-1},
 "Dinamo București": { CL_O: 1, CL_P: 1, CL_VS:0, CL_DR:-5},
-"Roda Kerkrade": { CL_O: 1, CL_P: 1, CL_VS:-2, CL_DR:-3},
+"Roda JC Kerkrade": { CL_O: 1, CL_P: 1, CL_VS:-2, CL_DR:-3},
 "Spora Luxembourg": { CL_P: 1, CL_VS:0, CL_DR:0},
 "Galatasaray": { CL_P: 1, CL_VS:0, CL_DR:-1},
 "Legia Warszawa": { CL_P: 1, CL_VS:0, CL_DR:-2},
