--- a/index.html
+++ b/index.html
@@ -337,7 +337,33 @@
 "Aarhus": { CL_P: 1, CL_VS:-1, CL_DR:-4},
 "Porto": { CL_P: 1, CL_VS:-2, CL_DR:-2},
 "Anderlecht": { CL_P: 1, CL_VS:-2, CL_DR:-12}
-      }
+      },
+      "1957/58": {
+  "Real Madrid": { CL_CL: 1, CL_P: 1, CL_VS: 4, CL_DR: 18 },
+  "Milan": { CL_F: 1, CL_P: 1, CL_VS: 2, CL_DR: 10 },
+  "Manchester United": { CL_SF: 1, CL_P: 1, CL_VS: 3, CL_DR: 7 },
+  "Vasas Budapest": { CL_SF: 1, CL_P: 1, CL_VS: 2, CL_DR: 7 },
+  "Crvena Zvezda": { CL_Q: 1, CL_P: 1, CL_VS: 2, CL_DR: 13 },
+  "Ajax": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: -1 },
+  "Sevilla": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: -4 },
+  "Borussia Dortmund": { CL_Q: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
+  "Aarhus": { CL_O: 1, CL_P: 1, CL_VS: 1, CL_DR: 1 },
+  "Steaua București": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Dukla Praga": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
+  "Young Boys": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Norrköping": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Wismut Aue": { CL_O: 1, CL_P: 1, CL_VS: -2, CL_DR: -3 },
+  "Rangers": { CL_O: 1, CL_P: 1, CL_VS: -2, CL_DR: -4 },
+  "Royal Antwerp": { CL_O: 1, CL_P: 1, CL_VS: -2, CL_DR: -7 },
+  "Gwardia Warszawa": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Saint-Étienne": { CL_P: 1, CL_VS: -1, CL_DR: 0 },
+  "CSKA Sofija": { CL_P: 1, CL_VS: -4, CL_DR: 0 },
+  "Benfica": { CL_P: 1, CL_VS: -1, CL_DR: -2 },
+  "Glenavon": { CL_P: 1, CL_VS: -1, CL_DR: -3 },
+  "Shamrock Rovers": { CL_P: 1, CL_VS: -2, CL_DR: -7 },
+  "Stade Dudelange": { CL_P: 1, CL_VS: -2, CL_DR: -13 },
+  "Rapid Wien": { CL_P: 1, CL_VS: 0, CL_DR: 0 }
+}
     };const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
 const seasons = Object.keys(data);
