--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
   "Cork Celtic", "Cork City", "Cork Hibernians", "Čornomorec' Odesa", "Corvinul Hunedoara", "Crusaders", "Csepel", "CSKA Mosca", "CSKA Sofija", 
   "CUF Barreiro", "Cukaricki", "DAC Dunajská Streda", "Debrecen", "Denizlispor", "Deportivo La Coruña", "Derby County", "Derry City", "Derry City", 
   "Dinamo Berlin", "Dinamo București", "Dynamo Dresden", "Dinamo Kiev", "Dinamo Minsk", "Dinamo Mosca", "Dinamo Tbilisi", "Dinamo Tirana", 
-  "Dinamo Zagabria", "Diosgyor", "Djurgården", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praga", "Dundalk", 
+  "Dinamo Zagabria", "Diosgyor", "Djurgården", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praha", "Dundalk", 
   "Dundee FC", "Dundee Utd", "DWS", "Dyskobolia Grodzisk Wielkopolski", "Eendracht Aalst", "Eintracht Braunschweig", "Eintracht Francoforte ", 
   "Elbasani", "Elfsborg", "EPA Larnaca", "Erzgebirge Aue", "Esbjerg", "Espanyol", "Estoril Praia", "Etar", "Everton", "FC Jazz", "Fehérvár", 
   "Fenerbahce", "Ferencvaros", "Feyenoord", "Fiorentina", "First Vienna", "FK TSC Bačka Topola", "Flamurtari", "Flora Tallin", "Floriana", "Fortuna Dusseldorf", 
@@ -255,11 +255,11 @@
   "Radnicki Nis", "Raith Rovers", "Raków Częstochowa", "Randers", "Rangers", "Rapid Bucarest", "Rapid Wien", "Rayo Vallecano", "RB Lipsia", "Real Betis Siviglia", 
   "Real Madrid", "Real Sociedad", "Real Valladolid", "Red Boys Differdange", "Reipas Lahti", "Rennes", "RFC Liegi", "RFS Riga", "Rijeka", "Rio Ave", "Roda JC Kerkrade", 
   "Roma", "RoPS", "Rosenborg", "Rostov", "Rot-Weiss Erfurt", "Rot-Weiss Essen", "Rotor Volvograd", "Rubin Kazan", "Ruch Chorzow", "RWD Molenbeek", "Saarbrücken", 
-  "Sachsen Leipzig", "Sachtar Donec'k", "Saint Etienne", "Salisburgo", "Sampdoria", "San Gallo", "Saragozza", "Sarajevo", "Sassuolo", "Schalke 04", "Servette", "Shahter FK", 
-  "Shamrock Rovers", "Sheffield Wednesday", "Shelbourne", "Sheriff Tiraspol", "Sigma Olomouc", "Silkeborg", "Sion", "Sivasspor", "Siviglia", "Skeid", "Skënderbeu", "Skonto Riga", 
+  "Sachsen Leipzig", "Sachtar Donec'k", "Saint Etienne", "Salzburg", "Sampdoria", "San Gallo", "Saragozza", "Sarajevo", "Sassuolo", "Schalke 04", "Servette", "Shahter FK", 
+  "Shamrock Rovers", "Sheffield Wednesday", "Shelbourne", "Sheriff Tiraspol", "Sigma Olomouc", "Silkeborg", "Sion", "Sivasspor", "Sevilla", "Skeid", "Skënderbeu", "Skonto Riga", 
   "Slavia Praga", "Slavija-Mazyr", "Slesia Breslavia", "Sliema Wanderers", "Sligo Rovers", "Slovacko", "Slovan Bratislava", "Slovan Liberec", "Sochaux", "Southampton", 
   "Sparta Praga", "Sparta Rotterdam", "Spartak Mosca", "Spartak Plovdiv", "Spartak Trnava", "Spora Luxembourg", "Sporting Gijón", "Sporting Clube de Portugal", "Sportul Studentesc Bucarest", 
-  "St Patrick's", "St. Johnstone", "St. Mirren", "Stade Dudelange", "Stade Reims", "Stahl Brandeburgo", "Stal Mielec", "Standard Liegi", "Start", "Steaua Bucarest", "Crvena Zvezda", 
+  "St Patrick's", "St. Johnstone", "St. Mirren", "Stade Dudelange", "Stade Reims", "Stahl Brandeburgo", "Stal Mielec", "Standard Liegi", "Start", "Steaua București", "Crvena Zvezda", 
   "Stuttgart", "Stoke City", "Strasbourg", "Stromsgodset", "Sturm Graz", "Swansea", "Swarovski Tirolo", "Szombierki Bytom", "Tatran Presov", "Tavriya Sinferopoli", "Tekstil'ščik Kamyšin", 
   "Tenerife", "Teplice", "Thun", "Tirolo Innsbruck", "Toulouse", "Torino", "Torpedo Moskva", "Tottenham", "TPS", "Trabzonspor", "Trelleborg FF", "Tromsø", "Twente", "U Craiova", 
   "Udinese", "Uerdingen", "Ujpest Dosza", "Union Berlino", "Union Lussemburgo", "Union Saint-Gilloise", "Unirea Urziceni", "UTA Arad", "Utrecht", "Vác", "Vaduz", "Valencia", "Valerenga", 
@@ -349,10 +349,10 @@
   "Borussia Dortmund": { CL_Q: 1, CL_P: 1, CL_VS: -1, CL_DR: -3 },
   "Aarhus": { CL_O: 1, CL_P: 1, CL_VS: 1, CL_DR: 1 },
   "Steaua București": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: 0 },
-  "Dukla Praga": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
+  "Dukla Praha": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
   "Young Boys": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -1 },
   "Norrköping": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -1 },
-  "Wismut Aue": { CL_O: 1, CL_P: 1, CL_VS: -2, CL_DR: -3 },
+  "Erzgebirge Aue": { CL_O: 1, CL_P: 1, CL_VS: -2, CL_DR: -3 },
   "Rangers": { CL_O: 1, CL_P: 1, CL_VS: -2, CL_DR: -4 },
   "Royal Antwerp": { CL_O: 1, CL_P: 1, CL_VS: -2, CL_DR: -7 },
   "Gwardia Warszawa": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
