--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     const teams = [
   "Aalborg BK", "Aarau", "Aarhus", "AB", "Aberdeen", "Académica Coimbra", "Admira Wien", "Admira Wacker", "ADO Den Haag",
   "AE Larisas", "AEK Athīna", "AEK Làrnaka", "AEL Lemesos", "AIK Solna", "Ajax", "Akademik Sofija", "Alanija Vladikavkaz",
-  "Alaskert", "Álaves", "Alemannia Aachen", "Hamburger", "Amsterdam FC", "Anderlecht", "Anorthosis Famagosta", "Anversa", 
+  "Alaskert", "Álaves", "Alemannia Aachen", "Hamburger", "Amsterdam FC", "Anderlecht", "Anorthosis Famagosta", "Royal Antwerp", 
   "Anži Machačkala", "Apoel", "Apollon Limassol", "Ararat", "Ards", "Arges Pitesti", "Aris Bonnevoie", "Arīs Limassol", 
   "Aris Salonicco", "Arsenal", "Astana", "Asteras Tripolīs", "Aston Villa", "Astra Giurgiu", "Atalanta", "Athletic Bilbao", 
   "Athlone Town", "Atletico Madrid", "Atvidaberg", "Austria Vienna", "Auxerre", "Avenir Beggen", "AZ Alkmaar", "B1903", "B1909", 
@@ -255,7 +255,7 @@
   "Radnicki Nis", "Raith Rovers", "Raków Częstochowa", "Randers", "Rangers", "Rapid Bucarest", "Rapid Wien", "Rayo Vallecano", "RB Lipsia", "Real Betis Siviglia", 
   "Real Madrid", "Real Sociedad", "Real Valladolid", "Red Boys Differdange", "Reipas Lahti", "Rennes", "RFC Liegi", "RFS Riga", "Rijeka", "Rio Ave", "Roda JC Kerkrade", 
   "Roma", "RoPS", "Rosenborg", "Rostov", "Rot-Weiss Erfurt", "Rot-Weiss Essen", "Rotor Volvograd", "Rubin Kazan", "Ruch Chorzow", "RWD Molenbeek", "Saarbrücken", 
-  "Sachsen Leipzig", "Sachtar Donec'k", "Saint Etienne", "Salzburg", "Sampdoria", "San Gallo", "Saragozza", "Sarajevo", "Sassuolo", "Schalke 04", "Servette", "Shahter FK", 
+  "Sachsen Leipzig", "Sachtar Donec'k", "Saint-Étienne", "Salzburg", "Sampdoria", "San Gallo", "Saragozza", "Sarajevo", "Sassuolo", "Schalke 04", "Servette", "Shahter FK", 
   "Shamrock Rovers", "Sheffield Wednesday", "Shelbourne", "Sheriff Tiraspol", "Sigma Olomouc", "Silkeborg", "Sion", "Sivasspor", "Sevilla", "Skeid", "Skënderbeu", "Skonto Riga", 
   "Slavia Praga", "Slavija-Mazyr", "Slesia Breslavia", "Sliema Wanderers", "Sligo Rovers", "Slovacko", "Slovan Bratislava", "Slovan Liberec", "Sochaux", "Southampton", 
   "Sparta Praga", "Sparta Rotterdam", "Spartak Mosca", "Spartak Plovdiv", "Spartak Trnava", "Spora Luxembourg", "Sporting Gijón", "Sporting Clube de Portugal", "Sportul Studentesc Bucarest", 
