--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
   "Udinese", "Uerdingen", "Ujpest Dosza", "Union Berlino", "Union Lussemburgo", "Union Saint-Gilloise", "Unirea Urziceni", "UTA Arad", "Utrecht", "Vác", "Vaduz", "Valencia", "Valerenga", 
   "Valletta", "Valur", "Vardar", "Vasas Budapest", "Vaslui", "Vejle", "Velez Mostar", "Ventspils", "Victoria Bucarest", "Viking", "Vikingur", "Viktoria Frankfurt", "Viktoria Plzen", 
   "Villareal", "Vistola Kraków", "Vitesse", "Vitkovice", "Vitoria Guimaraes", "Vitoria Setubal", "Vllaznia", "Vojvodina", "Vorskla", "VSS Kosice", "Wacker Innsbruck", "Waterford", 
-  "Watford", "Werder Brema", "West Bromwich", "West Ham", "Wettingen", "Widzew Lodz", "Wiener SK", "Wigan", "Willem II", "Winterslag", "Wolfsburg", "Wolverhampton", "Young Boys Berna", 
+  "Watford", "Werder Brema", "West Bromwich", "West Ham", "Wettingen", "Widzew Lodz", "Wiener SK", "Wigan", "Willem II", "Winterslag", "Wolfsburg", "Wolverhampton", "Young Boys", 
   "Zaglebie Lubin", "Zaglebie Walbrzych", "Zalgiris", "Zalgiris Kaunas", "Zbrojovka Brno", "Zeljeznicar", "Zenit San Pietroburgo", "Zilina", "Zimbru Chișinău", "Zorja", "Zrinjski Mostar", 
   "Zulte Waregem", "Zürich"
 ];
@@ -357,7 +357,7 @@
   "Royal Antwerp": { CL_O: 1, CL_P: 1, CL_VS: -2, CL_DR: -7 },
   "Gwardia Warszawa": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
   "Saint-Étienne": { CL_P: 1, CL_VS: -1, CL_DR: 0 },
-  "CSKA Sofija": { CL_P: 1, CL_VS: -4, CL_DR: 0 },
+  "CSKA Sofija": { CL_P: 1, CL_VS: 0, CL_DR: -4},
   "Benfica": { CL_P: 1, CL_VS: -1, CL_DR: -2 },
   "Glenavon": { CL_P: 1, CL_VS: -1, CL_DR: -3 },
   "Shamrock Rovers": { CL_P: 1, CL_VS: -2, CL_DR: -7 },
