--- a/index.html
+++ b/index.html
@@ -272,6 +272,8 @@
   const teamInfo = {
   "Juventus": {flag:"https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
     colorsImg:"https://upload.wikimedia.org/wikipedia/commons/4/49/600px_pentasection_vertical_Black_White.svg"},
+  "Manchester United": {flag:"https://upload.wikimedia.org/wikipedia/commons/b/be/Flag_of_England.svg",
+    colorsImg:"https://upload.wikimedia.org/wikipedia/commons/d/d8/600px_Man_Utd_stylized.svg"},
   "Milan": {flag: "https://upload.wikimedia.org/wikipedia/commons/0/03/Flag_of_Italy.svg",
     colorsImg: "https://upload.wikimedia.org/wikipedia/commons/1/1d/Bianco_e_Rosso_%28Croce%29_e_Rosso_e_Nero_%28Strisce%29.svg"},
   "Real Madrid": {flag: "https://upload.wikimedia.org/wikipedia/commons/9/9a/Flag_of_Spain.svg",
