--- a/index.html
+++ b/index.html
@@ -220,16 +220,16 @@
   "Alaskert", "Álaves", "Alemannia Aachen", "Hamburger", "Amsterdam FC", "Anderlecht", "Anorthosis Famagosta", "Royal Antwerp", 
   "Anži Machačkala", "Apoel", "Apollon Limassol", "Ararat", "Ards", "Arges Pitesti", "Aris Bonnevoie", "Arīs Limassol", 
   "Aris Salonicco", "Arsenal", "Astana", "Asteras Tripolīs", "Aston Villa", "Astra Giurgiu", "Atalanta", "Athletic Bilbao", 
-  "Athlone Town", "Atletico Madrid", "Atvidaberg", "Austria Vienna", "Auxerre", "Avenir Beggen", "AZ Alkmaar", "B1903", "B1909", 
+  "Athlone Town", "Atlético Madrid", "Atvidaberg", "Austria Vienna", "Auxerre", "Avenir Beggen", "AZ Alkmaar", "B1903", "B1909", 
   "B1913", "Ballkani", "Banik Ostrava", "Barcelona", "Basilea", "Bastia", "BATE Borisov", "Bayer Leverkusen", "Bayern München", 
-  "Beitar Gerusalemme ", "Belenenses", "Benfica", "Beroe", "Besiktas", "Beveren", "Birmingham City", "BK Frem", "Blackburn Rovers", 
+  "Beitar Gerusalemme ", "Belenenses", "Benfica", "Beroe", "Beşiktaş", "Beveren", "Birmingham City", "BK Frem", "Blackburn Rovers", 
   "Boavista", "Bochum", "Bodø/Glimt", "Bohemians", "Bohemians Praga", "Bologna", "Bolton", "Bordeaux", "Borussia Dortmund", "Borussia M'Gladbach", 
   "Botev Plovdiv", "Braga", "Brage", "Brann", "Brasov FC", "Breidablik", "Brighton", "Brøndby", "Burnley", "Bursaspor", "Cagliari", "Cannes", 
   "Carl Zeiss Jena", "Celta Vigo", "Celtic", "CFR Cluj", "Chaves", "Chelsea", "Chemnitzer", "Club Brugge", "Coleraine", "Colonia", "Copenaghen", 
   "Cork Celtic", "Cork City", "Cork Hibernians", "Čornomorec' Odesa", "Corvinul Hunedoara", "Crusaders", "Csepel", "CSKA Mosca", "CSKA Sofija", 
   "CUF Barreiro", "Cukaricki", "DAC Dunajská Streda", "Debrecen", "Denizlispor", "Deportivo La Coruña", "Derby County", "Derry City", "Derry City", 
-  "Dinamo Berlin", "Dinamo București", "Dynamo Dresden", "Dinamo Kiev", "Dinamo Minsk", "Dinamo Mosca", "Dinamo Tbilisi", "Dinamo Tirana", 
-  "Dinamo Zagabria", "Diosgyor", "Djurgården", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praha", "Dundalk", 
+  "Dinamo Berlin", "Dinamo București", "Dynamo Dresden", "Dinamo Kiev", "Dinamo Minsk", "Dinamo Moskva", "Dinamo Tbilisi", "Dinamo Tirana", 
+  "Dinamo Zagreb", "Diosgyor", "Djurgården", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praha", "Dundalk", 
   "Dundee FC", "Dundee Utd", "DWS", "Dyskobolia Grodzisk Wielkopolski", "Eendracht Aalst", "Eintracht Braunschweig", "Eintracht Francoforte ", 
   "Elbasani", "Elfsborg", "EPA Larnaca", "Erzgebirge Aue", "Esbjerg", "Espanyol", "Estoril Praia", "Etar", "Everton", "FC Jazz", "Fehérvár", 
   "Fenerbahce", "Ferencvaros", "Feyenoord", "Fiorentina", "First Vienna", "FK TSC Bačka Topola", "Flamurtari", "Flora Tallin", "Floriana", "Fortuna Dusseldorf", 
@@ -259,7 +259,7 @@
   "Shamrock Rovers", "Sheffield Wednesday", "Shelbourne", "Sheriff Tiraspol", "Sigma Olomouc", "Silkeborg", "Sion", "Sivasspor", "Sevilla", "Skeid", "Skënderbeu", "Skonto Riga", 
   "Slavia Praga", "Slavija-Mazyr", "Slesia Breslavia", "Sliema Wanderers", "Sligo Rovers", "Slovacko", "Slovan Bratislava", "Slovan Liberec", "Sochaux", "Southampton", 
   "Sparta Praga", "Sparta Rotterdam", "Spartak Mosca", "Spartak Plovdiv", "Spartak Trnava", "Spora Luxembourg", "Sporting Gijón", "Sporting Clube de Portugal", "Sportul Studentesc Bucarest", 
-  "St Patrick's", "St. Johnstone", "St. Mirren", "Stade Dudelange", "Stade Reims", "Stahl Brandeburgo", "Stal Mielec", "Standard Liegi", "Start", "Steaua București", "Crvena Zvezda", 
+  "St Patrick's", "St. Johnstone", "St. Mirren", "Stade Dudelange", "Stade de Reims", "Stahl Brandeburgo", "Stal Mielec", "Standard Liegi", "Start", "Steaua București", "Crvena Zvezda", 
   "Stuttgart", "Stoke City", "Strasbourg", "Stromsgodset", "Sturm Graz", "Swansea", "Swarovski Tirolo", "Szombierki Bytom", "Tatran Presov", "Tavriya Sinferopoli", "Tekstil'ščik Kamyšin", 
   "Tenerife", "Teplice", "Thun", "Tirolo Innsbruck", "Toulouse", "Torino", "Torpedo Moskva", "Tottenham", "TPS", "Trabzonspor", "Trelleborg FF", "Tromsø", "Twente", "U Craiova", 
   "Udinese", "Uerdingen", "Ujpest Dosza", "Union Berlino", "Union Lussemburgo", "Union Saint-Gilloise", "Unirea Urziceni", "UTA Arad", "Utrecht", "Vác", "Vaduz", "Valencia", "Valerenga", 
@@ -301,7 +301,7 @@
       "1955/56": {
         "Real Madrid": { CL_CL: 1, CL_P:1, CL_VS:3, CL_DR:10 },
         "Milan": { CL_SF: 1, CL_P:1, CL_VS:1, CL_DR:6 },
-        "Stade Reims": { CL_F: 1, CL_P:1, CL_VS:3, CL_DR:6},
+        "Stade de Reims": { CL_F: 1, CL_P:1, CL_VS:3, CL_DR:6},
           "Hibernian": { CL_SF: 1, CL_P:1, CL_VS:1, CL_DR:4},
 "MTK Budapest": {CL_Q: 1, CL_P:1, CL_VS:1, CL_DR:4},
 "Partinzan Beograd":{CL_Q: 1, CL_P:1, CL_VS:1, CL_DR:2},
@@ -364,7 +364,37 @@
   "Glenavon": { CL_P: 1, CL_VS: -1, CL_DR: -3 },
   "Shamrock Rovers": { CL_P: 1, CL_VS: -2, CL_DR: -7 },
   "Stade Dudelange": { CL_P: 1, CL_VS: -2, CL_DR: -13 },
-  "Rapid Wien": { CL_P: 1, CL_VS: 0, CL_DR: 0 }
+  "Rapid Wien": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+        "1958/59": {
+  "Real Madrid": { CL_CL: 1, CL_P: 1, CL_VS: 3, CL_DR: 10 },
+  "Stade de Reims": { CL_F: 1, CL_P: 1, CL_VS: 3, CL_DR: 15 },
+  "Atlético Madrid": { CL_SF: 1, CL_P: 1, CL_VS: 3, CL_DR: 15 },
+  "Young Boys": { CL_SF: 1, CL_P: 1, CL_VS: 2, CL_DR: 2 },
+  "Standard Liège": { CL_Q: 1, CL_P: 1, CL_VS: 2, CL_DR: 6 },
+  "Dukla Praha": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 0 },
+  "Chemnitzer": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 4 },
+  "MTK Budapest": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: 2 },
+  "Wiener SK": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: 0 },
+  "CSKA Sofija": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Schalke 04": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
+  "Sporting Clube de Portugal": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
+  "Göteborg": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -4 },
+  "Wolverhampton": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Beşiktaş": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -2 },
+  "Dinamo Zagreb": { CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Juventus": { CL_P: 1, CL_VS: 0, CL_DR: -5 },
+  "Manchester United": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Jeunesse Esch": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Olympiakos": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Copenhagen Boldklub": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Petrolul Ploiești": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Heart of Midlothian": { CL_P: 1, CL_VS: -3, CL_DR: 0 },
+  "Polonia Bytom": { CL_P: 1, CL_VS: -2, CL_DR: -6 },
+  "DOS Utrecht": { CL_P: 1, CL_VS: -2, CL_DR: -2 },
+  "Ards": { CL_P: 1, CL_VS: -2, CL_DR: -7 },
+  "Drumcondra": { CL_P: 1, CL_VS: -2, CL_DR: -12 },
+  "HPS": { CL_P: 1, CL_VS: -2, CL_DR: -7 }
+}
 }
     };const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
