--- a/index.html
+++ b/index.html
@@ -364,7 +364,8 @@
   "Glenavon": { CL_P: 1, CL_VS: -1, CL_DR: -3 },
   "Shamrock Rovers": { CL_P: 1, CL_VS: -2, CL_DR: -7 },
   "Stade Dudelange": { CL_P: 1, CL_VS: -2, CL_DR: -13 },
-  "Rapid Wien": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Rapid Wien": { CL_P: 1, CL_VS: 0, CL_DR: 0 }
+      },
         "1958/59": {
   "Real Madrid": { CL_CL: 1, CL_P: 1, CL_VS: 3, CL_DR: 10 },
   "Stade de Reims": { CL_F: 1, CL_P: 1, CL_VS: 3, CL_DR: 15 },
