--- a/index.html
+++ b/index.html
@@ -10,26 +10,20 @@
     background-color: #f9fafb;
     color: #1f2937;
     overflow-x:visible;
-    width: 300vw;
-  }
-
+    width: 300vw;}
   /* Header e Titolo */
   .hero-section {
     background: linear-gradient(to right, #e0f2fe, #f8fafc);
     padding: 30px 20px;
     margin-bottom: 30px;
     border-radius: 16px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-  }
-
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);}
   .main-title {
     font-size: 3rem;
     text-align: center;
     font-weight: 800;
     color: #0f172a;
-    margin-bottom: 20px;
-  }
-
+    margin-bottom: 20px;}
 /* MENÙ CAMPIONATI */
 .league-menu {
   display: flex;
@@ -43,18 +37,15 @@
   border: 1px solid #d1d5db;
   width: 100%;
   scroll-behaviour: smooth;
-  box-sizing: border-box;
-}
+  box-sizing: border-box;}
 .league-menu::-webkit-scrollbar {
-  display: none;
-}
+  display: none;}
 .menu-label {
   font-weight: 600;
   font-size: 1rem;
   color: #111827;
   margin-right: 16px;
-  flex-shrink: 0;
-}
+  flex-shrink: 0;}
 .menu-link {
   display: inline-block;
   text-decoration: none;
@@ -65,13 +56,10 @@
   border: 1px solid #d1d5db;
   margin-right: 12px;
   transition: background-color 0.2s ease, transform 0.1s ease;
-  white-space: nowrap;
-}
+  white-space: nowrap;}
 .menu-link:hover {
   background-color: #f3f4f6;
-  transform: translateY(-1px);
-}
-
+  transform: translateY(-1px);}
 /* SELEZIONATORE STAGIONI */
 .filters {
   display: flex;
@@ -80,26 +68,21 @@
   background-color: #ffffff;
   padding: 14px 24px;
   margin-bottom: 30px;
-  border: 1px solid #d1d5db;
-}
+  border: 1px solid #d1d5db;}
 .filters label {
   font-size: 1rem;
   font-weight: 600;
-  color: #111827;
-}
+  color: #111827;}
 .filters select {
   padding: 6px 10px;
   font-size: 1rem;
   font-weight: 400;
   color: #111827;
   background-color: #ffffff;
-  border: 1px solid #d1d5db;
-}
+  border: 1px solid #d1d5db;}
 .filters select:focus {
   outline: none;
-  border-color: #2563eb;
-}
-
+  border-color: #2563eb;}
   /* Tabella */
   table {
     border-collapse: collapse;
@@ -107,89 +90,60 @@
     background-color: #ffffff;
     border-radius: 12px;
     overflow: hidden;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
-  }
-
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);}
   th, td {
     border: 1px solid #e5e7eb;
     padding: 6px 8px;
     text-align: center;
-    font-size: 0.75rem;
-  }
-
+    font-size: 0.75rem;}
   th {
     background-color: #f3f4f6;
     font-weight: 600;
-    cursor: pointer;
-  }
-
+    cursor: pointer;}
   .row-alt-light td {
-    filter: brightness(1.1);
-  }
-
+    filter: brightness(1.1);}
   .row-alt-normal td {
-    filter: brightness(1);
-  }
-
+    filter: brightness(1);}
   .row-alt-light:hover td,
   .row-alt-normal:hover td {
     filter: brightness(1.25);
-    cursor: pointer;
-  }
-
+    cursor: pointer;}
   tr:hover td {
     filter: brightness(1.15);
-    cursor: pointer;
-  }
-
+    cursor: pointer;}
   /* Colori colonne */
   .tot {
     background-color: #facc15 !important;
     color: #1f2937;
-    font-weight: 600;
-  }
-
+    font-weight: 600;}
   .cl-column {
     background-color: #1e3a8a !important;
-    color: white;
-  }
-
+    color: white;}
   .el-column {
     background-color: #7f1d1d !important;
-    color: #fb923c;
-  }
-
+    color: #fb923c;}
   .cfl-column {
     background-color: #15803d !important;
-    color: white;
-  }
-
+    color: white;}
   .cdc-column {
     background-color: #bae6fd !important;
-    color: #0c4a6e;
-  }
-
+    color: #0c4a6e;}
   .sc-column {
     background-color: #06b6d4 !important;
-    color: white;
-  }
-
+    color: white;}
   /* Logo squadre */
 .team-name {
   display: inline-flex;
   align-items: center;
-  gap: 4px;
-}
+  gap: 4px;}
 .team-colors-img, .team-flag {
   height: 14px;
   width: auto;
   display: inline-block;
-  flex-shrink: 0;
-}
+  flex-shrink: 0;}
   .team-cell {
     text-align: left;
-    padding-left: 10px;
-  }
+    padding-left: 10px;}
 </style>
 </head>
 <body>
