--- a/index.html
+++ b/index.html
@@ -319,6 +319,36 @@
   "Shamrock Rovers": { CL_P: 1, CL_VS: -2, CL_DR: -7 },
   "Stade Dudelange": { CL_P: 1, CL_VS: -2, CL_DR: -13 },
   "Rapid Wien": { CL_P: 1, CL_VS: 0, CL_DR: 0 }
+},
+      "1958/59": {
+  "Real Madrid": { CL_CL: 1, CL_P: 1, CL_VS: 3, CL_DR: 10 },
+  "Stade de Reims": { CL_F: 1, CL_P: 1, CL_VS: 3, CL_DR: 15 },
+  "Atlético Madrid": { CL_SF: 1, CL_P: 1, CL_VS: 3, CL_DR: 15 },
+  "Young Boys": { CL_SF: 1, CL_P: 1, CL_VS: 2, CL_DR: 2 },
+  "Standard Liège": { CL_Q: 1, CL_P: 1, CL_VS: 2, CL_DR: 6 },
+  "Dukla Praha": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 0 },
+  "Chemnitzer FC": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 4 },
+  "MTK Budapest": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: 2 },
+  "Wiener SK": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: 0 },
+  "CSKA Sofia": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Schalke 04": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
+  "Sporting CP": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
+  "IFK Göteborg": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -4 },
+  "Wolverhampton": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Beşiktaş": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -2 },
+  "Dinamo Zagreb": { CL_P: 1, CL_VS: -1, CL_DR: -1 },
+  "Juventus": { CL_P: 1, CL_VS: 0, CL_DR: -5 },
+  "Manchester United": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Jeunesse Esch": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Olympiakos": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Copenhagen Boldklub": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Petrolul Ploiești": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Heart of Midlothian": { CL_P: 1, CL_VS: -3, CL_DR: 0 },
+  "Polonia Bytom": { CL_P: 1, CL_VS: -2, CL_DR: -6 },
+  "DOS Utrecht": { CL_P: 1, CL_VS: -2, CL_DR: -2 },
+  "Ards": { CL_P: 1, CL_VS: -2, CL_DR: -7 },
+  "Drumcondra": { CL_P: 1, CL_VS: -2, CL_DR: -12 },
+  "HPS": { CL_P: 1, CL_VS: -2, CL_DR: -7 }
 }
     };const startYear = document.getElementById("startYear");
 const endYear = document.getElementById("endYear");
