--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   "Alaskert", "Álaves", "Alemannia Aachen", "Hamburger", "Amsterdam FC", "Anderlecht", "Anorthosis Famagosta", "Royal Antwerp", 
   "Anži Machačkala", "Apoel", "Apollon Limassol", "Ararat", "Ards", "Arges Pitesti", "Aris Bonnevoie", "Arīs Limassol", 
   "Aris Salonicco", "Arsenal", "Astana", "Asteras Tripolīs", "Aston Villa", "Astra Giurgiu", "Atalanta", "Athletic Bilbao", 
-  "Athlone Town", "Atletico Madrid", "Atvidaberg", "Austria Vienna", "Auxerre", "Avenir Beggen", "AZ Alkmaar", "B1903", "B1909", 
+  "Athlone Town", "Atlético Madrid", "Atvidaberg", "Austria Vienna", "Auxerre", "Avenir Beggen", "AZ Alkmaar", "B1903", "B1909", 
   "B1913", "Ballkani", "Banik Ostrava", "Barcelona", "Basilea", "Bastia", "BATE Borisov", "Bayer Leverkusen", "Bayern München", 
   "Beitar Gerusalemme ", "Belenenses", "Benfica", "Beroe", "Besiktas", "Beveren", "Birmingham City", "BK Frem", "Blackburn Rovers", 
   "Boavista", "Bochum", "Bodø/Glimt", "Bohemians", "Bohemians Praga", "Bologna", "Bolton", "Bordeaux", "Borussia Dortmund", "Borussia M'Gladbach", 
@@ -213,7 +213,7 @@
   "Shamrock Rovers", "Sheffield Wednesday", "Shelbourne", "Sheriff Tiraspol", "Sigma Olomouc", "Silkeborg", "Sion", "Sivasspor", "Sevilla", "Skeid", "Skënderbeu", "Skonto Riga", 
   "Slavia Praga", "Slavija-Mazyr", "Slesia Breslavia", "Sliema Wanderers", "Sligo Rovers", "Slovacko", "Slovan Bratislava", "Slovan Liberec", "Sochaux", "Southampton", 
   "Sparta Praga", "Sparta Rotterdam", "Spartak Mosca", "Spartak Plovdiv", "Spartak Trnava", "Spora Luxembourg", "Sporting Gijón", "Sporting Clube de Portugal", "Sportul Studentesc Bucarest", 
-  "St Patrick's", "St. Johnstone", "St. Mirren", "Stade Dudelange", "Stade Reims", "Stahl Brandeburgo", "Stal Mielec", "Standard Liegi", "Start", "Steaua București", "Crvena Zvezda", 
+  "St Patrick's", "St. Johnstone", "St. Mirren", "Stade Dudelange", "Stade de Reims", "Stahl Brandeburgo", "Stal Mielec", "Standard Liège", "Start", "Steaua București", "Crvena Zvezda", 
   "Stuttgart", "Stoke City", "Strasbourg", "Stromsgodset", "Sturm Graz", "Swansea", "Swarovski Tirolo", "Szombierki Bytom", "Tatran Presov", "Tavriya Sinferopoli", "Tekstil'ščik Kamyšin", 
   "Tenerife", "Teplice", "Thun", "Tirolo Innsbruck", "Toulouse", "Torino", "Torpedo Moskva", "Tottenham", "TPS", "Trabzonspor", "Trelleborg FF", "Tromsø", "Twente", "U Craiova", 
   "Udinese", "Uerdingen", "Ujpest Dosza", "Union Berlino", "Union Lussemburgo", "Union Saint-Gilloise", "Unirea Urziceni", "UTA Arad", "Utrecht", "Vác", "Vaduz", "Valencia", "Valerenga", 
