--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
   "Aris Salonicco", "Arsenal", "Astana", "Asteras Tripolīs", "Aston Villa", "Astra Giurgiu", "Atalanta", "Athletic Bilbao", 
   "Athlone Town", "Atlético Madrid", "Atvidaberg", "Austria Vienna", "Auxerre", "Avenir Beggen", "AZ Alkmaar", "B1903", "B1909", 
   "B1913", "Ballkani", "Banik Ostrava", "Barcelona", "Basilea", "Bastia", "BATE Borisov", "Bayer Leverkusen", "Bayern München", 
-  "Beitar Gerusalemme ", "Belenenses", "Benfica", "Beroe", "Besiktas", "Beveren", "Birmingham City", "BK Frem", "Blackburn Rovers", 
+  "Beitar Gerusalemme ", "Belenenses", "Benfica", "Beroe", "Beşiktaş", "Beveren", "Birmingham City", "BK Frem", "Blackburn Rovers", 
   "Boavista", "Bochum", "Bodø/Glimt", "Bohemians", "Bohemians Praga", "Bologna", "Bolton", "Bordeaux", "Borussia Dortmund", "Borussia M'Gladbach", 
   "Botev Plovdiv", "Braga", "Brage", "Brann", "Brasov FC", "Breidablik", "Brighton", "Brøndby", "Burnley", "Bursaspor", "Cagliari", "Cannes", 
   "Carl Zeiss Jena", "Celta Vigo", "Celtic", "CFR Cluj", "Chaves", "Chelsea", "Chemnitzer", "Club Brugge", "Coleraine", "Colonia", "Copenaghen", 
   "Cork Celtic", "Cork City", "Cork Hibernians", "Čornomorec' Odesa", "Corvinul Hunedoara", "Crusaders", "Csepel", "CSKA Mosca", "CSKA Sofija", 
   "CUF Barreiro", "Cukaricki", "DAC Dunajská Streda", "Debrecen", "Denizlispor", "Deportivo La Coruña", "Derby County", "Derry City", "Derry City", 
   "Dinamo Berlin", "Dinamo București", "Dynamo Dresden", "Dinamo Kiev", "Dinamo Minsk", "Dinamo Mosca", "Dinamo Tbilisi", "Dinamo Tirana", 
-  "Dinamo Zagabria", "Diosgyor", "Djurgården", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praha", "Dundalk", 
+  "Dinamo Zagreb", "Diosgyor", "Djurgården", "Dnipro", "Dnipro-1", "DOS Utrecht", "Drumcondra", "Duisburgo", "Dukla Praha", "Dundalk", 
   "Dundee FC", "Dundee Utd", "DWS", "Dyskobolia Grodzisk Wielkopolski", "Eendracht Aalst", "Eintracht Braunschweig", "Eintracht Francoforte ", 
   "Elbasani", "Elfsborg", "EPA Larnaca", "Erzgebirge Aue", "Esbjerg", "Espanyol", "Estoril Praia", "Etar", "Everton", "FC Jazz", "Fehérvár", 
   "Fenerbahce", "Ferencvaros", "Feyenoord", "Fiorentina", "First Vienna", "FK TSC Bačka Topola", "Flamurtari", "Flora Tallin", "Floriana", "Fortuna Dusseldorf", 
@@ -327,13 +327,13 @@
   "Young Boys": { CL_SF: 1, CL_P: 1, CL_VS: 2, CL_DR: 2 },
   "Standard Liège": { CL_Q: 1, CL_P: 1, CL_VS: 2, CL_DR: 6 },
   "Dukla Praha": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 0 },
-  "Chemnitzer FC": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 4 },
+  "Chemnitzer": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 4 },
   "MTK Budapest": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: 2 },
   "Wiener SK": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: 0 },
-  "CSKA Sofia": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "CSKA Sofija": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: 0 },
   "Schalke 04": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
-  "Sporting CP": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
-  "IFK Göteborg": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -4 },
+  "Sporting Clube de Portugal": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
+  "Göteborg": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -4 },
   "Wolverhampton": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -1 },
   "Beşiktaş": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -2 },
   "Dinamo Zagreb": { CL_P: 1, CL_VS: -1, CL_DR: -1 },
