--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   "Fram Reykjavik", "Fredrikstad", "Freiburg", "Fulham", "Galatasaray", "Gaziantepspor", "Gençlerbirliği", "Genk", "Genoa", "Gent", "Getafe", 
   "GKS Katowice", "Glenavon", "Glentoran", "Gornik Zabrze", "Göteborg", "Grasshoppers", "Grazer AK", "Groningen", "Guingamp", "Gwardia Warszawa", 
   "Győr", "Haarlem", "Häcken", "Hajduk Split", "Haka", "Halmstad", "Hammarby", "Hamrun Spartans", "Hannover 96", "Hansa Rostock", "Hapoel Be'er Sheva", 
-  "Hapoel Tel Aviv", "Hearts", "Heerenveen", "Hellas Verona", "Helsingborg", "Hertha Berliner", "Hibernian", "Hibernians", "HIFK", "HJK", "Hoffenheim ", 
+  "Hapoel Tel Aviv", "Heart of Midlothian", "Heerenveen", "Hellas Verona", "Helsingborg", "Hertha Berliner", "Hibernian", "Hibernians", "HIFK", "HJK", "Hoffenheim ", 
   "Honvéd Budapest", "HPS", "Hradec Kralove", "Hvidovre", "IA Akraness", "IBV Vestmannæyja", "IFK Malmö", "Ilves", "Internazionale Milano", "Inter Bratislava", "Ipswich Town", 
   "Ironi Kiryat Shmona", "Istanbul Basaksehir", "Jablonec", "Jeunesse Esch", "Juventus", "KA Akureyri", "Kaiserslautern", "Karlsruher", "Karpaty", "KB", 
   "Keflavik", "KF Tirana", "Kí Klaksvík", "Kilmarnock", "Køge BK", "Kongsvinger IT", "Konyaspor", "KPV", "KR Reykjavik", "Krasnodar ", "KSV Waregem", 
