--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   "Beitar Gerusalemme ", "Belenenses", "Benfica", "Beroe", "Beşiktaş", "Beveren", "Birmingham City", "BK Frem", "Blackburn Rovers", 
   "Boavista", "Bochum", "Bodø/Glimt", "Bohemians", "Bohemians Praga", "Bologna", "Bolton", "Bordeaux", "Borussia Dortmund", "Borussia M'Gladbach", 
   "Botev Plovdiv", "Braga", "Brage", "Brann", "Brasov FC", "Breidablik", "Brighton", "Brøndby", "Burnley", "Bursaspor", "Cagliari", "Cannes", 
-  "Carl Zeiss Jena", "Celta Vigo", "Celtic", "CFR Cluj", "Chaves", "Chelsea", "Chemnitzer", "Club Brugge", "Coleraine", "Colonia", "Copenaghen", 
+  "Carl Zeiss Jena", "Celta Vigo", "Celtic", "CFR Cluj", "Chaves", "Chelsea", "Chemnitzer", "Club Brugge", "Coleraine", "Colonia", "Kjøbenhavns BK", 
   "Cork Celtic", "Cork City", "Cork Hibernians", "Čornomorec' Odesa", "Corvinul Hunedoara", "Crusaders", "Csepel", "CSKA Mosca", "CSKA Sofija", 
   "CUF Barreiro", "Cukaricki", "DAC Dunajská Streda", "Debrecen", "Denizlispor", "Deportivo La Coruña", "Derby County", "Derry City", "Derry City", 
   "Dinamo Berlin", "Dinamo București", "Dynamo Dresden", "Dinamo Kiev", "Dinamo Minsk", "Dinamo Mosca", "Dinamo Tbilisi", "Dinamo Tirana", 
@@ -341,7 +341,7 @@
   "Manchester United": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
   "Jeunesse Esch": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
   "Olympiakos": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
-  "Copenhagen Boldklub": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
+  "Kjøbenhavns BK": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
   "Petrolul Ploiești": { CL_P: 1, CL_VS: 0, CL_DR: 0 },
   "Heart of Midlothian": { CL_P: 1, CL_VS: -3, CL_DR: 0 },
   "Polonia Bytom": { CL_P: 1, CL_VS: -2, CL_DR: -6 },
