--- a/index.html
+++ b/index.html
@@ -326,12 +326,12 @@
   "Atlético Madrid": { CL_SF: 1, CL_P: 1, CL_VS: 3, CL_DR: 15 },
   "Young Boys": { CL_SF: 1, CL_P: 1, CL_VS: 2, CL_DR: 2 },
   "Standard Liège": { CL_Q: 1, CL_P: 1, CL_VS: 2, CL_DR: 6 },
-  "Dukla Praha": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 0 },
+  "Dukla Praha": { CL_O: 1, CL_P: 1, CL_VS: 1, CL_DR: 0 },
   "Chemnitzer": { CL_Q: 1, CL_P: 1, CL_VS: 1, CL_DR: 4 },
-  "MTK Budapest": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: 2 },
-  "Wiener SK": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: 0 },
+  "MTK Budapest": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: 2 },
+  "Wiener SK": { CL_Q: 1, CL_P: 1, CL_VS: -1, CL_DR: 0 },
   "CSKA Sofija": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: 0 },
-  "Schalke 04": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
+  "Schalke 04": { CL_Q: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
   "Sporting Clube de Portugal": { CL_O: 1, CL_P: 1, CL_VS: 0, CL_DR: -2 },
   "Göteborg": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -4 },
   "Wolverhampton": { CL_O: 1, CL_P: 1, CL_VS: -1, CL_DR: -1 },
